// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compound-profiles — PK profile snapshots > 5-amino-1mq PK fields are present and stable 1`] = `
{
  "citationIds": [
    "34304009",
  ],
  "halfLifeLabel": "~2–4 h",
  "halfLifeMax": 240,
  "halfLifeMin": 120,
  "route": "oral",
  "slug": "5-amino-1mq",
}
`;

exports[`compound-profiles — PK profile snapshots > ace-031 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "22570080",
  ],
  "halfLifeLabel": "~10–14 days",
  "halfLifeMax": 20160,
  "halfLifeMin": 14400,
  "route": "subcutaneous",
  "slug": "ace-031",
}
`;

exports[`compound-profiles — PK profile snapshots > aod-9604 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "11146367",
  ],
  "halfLifeLabel": "~30 min",
  "halfLifeMax": 30,
  "halfLifeMin": 30,
  "route": "subcutaneous",
  "slug": "aod-9604",
}
`;

exports[`compound-profiles — PK profile snapshots > b12-injection PK fields are present and stable 1`] = `
{
  "citationIds": [
    "39245417",
  ],
  "halfLifeLabel": "~4–6 days (plasma terminal t½)",
  "halfLifeMax": 8640,
  "halfLifeMin": 5760,
  "route": "subcutaneous",
  "slug": "b12-injection",
}
`;

exports[`compound-profiles — PK profile snapshots > cag-sema-blend PK fields are present and stable 1`] = `
{
  "citationIds": [
    "34555300",
  ],
  "halfLifeLabel": "~7 days (both components)",
  "halfLifeMax": undefined,
  "halfLifeMin": undefined,
  "route": "subcutaneous",
  "slug": "cag-sema-blend",
}
`;

exports[`compound-profiles — PK profile snapshots > cagrilintide PK fields are present and stable 1`] = `
{
  "citationIds": [
    "34555300",
  ],
  "halfLifeLabel": "~7 days",
  "halfLifeMax": undefined,
  "halfLifeMin": undefined,
  "route": "subcutaneous",
  "slug": "cagrilintide",
}
`;

exports[`compound-profiles — PK profile snapshots > cjc-1295-w-dac PK fields are present and stable 1`] = `
{
  "citationIds": [
    "16352683",
  ],
  "halfLifeLabel": "~6–8 days",
  "halfLifeMax": 11520,
  "halfLifeMin": 8640,
  "route": "subcutaneous",
  "slug": "cjc-1295-w-dac",
}
`;

exports[`compound-profiles — PK profile snapshots > dsip PK fields are present and stable 1`] = `
{
  "citationIds": [
    "6202839",
  ],
  "halfLifeLabel": "~20–30 min (SC estimate)",
  "halfLifeMax": 30,
  "halfLifeMin": 20,
  "route": "subcutaneous",
  "slug": "dsip",
}
`;

exports[`compound-profiles — PK profile snapshots > enclomiphene PK fields are present and stable 1`] = `
{
  "citationIds": [
    "22355298",
  ],
  "halfLifeLabel": "~8–12 h",
  "halfLifeMax": 720,
  "halfLifeMin": 480,
  "route": "oral",
  "slug": "enclomiphene",
}
`;

exports[`compound-profiles — PK profile snapshots > foxo4-dri PK fields are present and stable 1`] = `
{
  "citationIds": [
    "28340339",
  ],
  "halfLifeLabel": "~30–60 min",
  "halfLifeMax": 60,
  "halfLifeMin": 30,
  "route": "subcutaneous",
  "slug": "foxo4-dri",
}
`;

exports[`compound-profiles — PK profile snapshots > ghrp-6 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "9879640",
  ],
  "halfLifeLabel": "~15–60 min",
  "halfLifeMax": 60,
  "halfLifeMin": 15,
  "route": "subcutaneous",
  "slug": "ghrp-6",
}
`;

exports[`compound-profiles — PK profile snapshots > gonadorelin PK fields are present and stable 1`] = `
{
  "citationIds": [
    "3278187",
    "3007081",
  ],
  "halfLifeLabel": "~5–10 min",
  "halfLifeMax": 10,
  "halfLifeMin": 5,
  "route": "subcutaneous",
  "slug": "gonadorelin",
}
`;

exports[`compound-profiles — PK profile snapshots > hexarelin PK fields are present and stable 1`] = `
{
  "citationIds": [
    "10611139",
  ],
  "halfLifeLabel": "~70–90 min",
  "halfLifeMax": 90,
  "halfLifeMin": 70,
  "route": "subcutaneous",
  "slug": "hexarelin",
}
`;

exports[`compound-profiles — PK profile snapshots > kisspeptin-10 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "24449855",
    "19237537",
  ],
  "halfLifeLabel": "~15–30 min",
  "halfLifeMax": 30,
  "halfLifeMin": 15,
  "route": "subcutaneous",
  "slug": "kisspeptin-10",
}
`;

exports[`compound-profiles — PK profile snapshots > kisspeptin-54 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "24449855",
    "19237537",
  ],
  "halfLifeLabel": "~28–35 min",
  "halfLifeMax": 35,
  "halfLifeMin": 28,
  "route": "subcutaneous",
  "slug": "kisspeptin-54",
}
`;

exports[`compound-profiles — PK profile snapshots > l-carnitine PK fields are present and stable 1`] = `
{
  "citationIds": [
    "37775945",
  ],
  "halfLifeLabel": "~3–5 h (SC estimate)",
  "halfLifeMax": 300,
  "halfLifeMin": 180,
  "route": "subcutaneous",
  "slug": "l-carnitine",
}
`;

exports[`compound-profiles — PK profile snapshots > mazdutide PK fields are present and stable 1`] = `
{
  "citationIds": [
    "37086042",
  ],
  "halfLifeLabel": "~4.5–6 days",
  "halfLifeMax": 8640,
  "halfLifeMin": 6480,
  "route": "subcutaneous",
  "slug": "mazdutide",
}
`;

exports[`compound-profiles — PK profile snapshots > melanotan-i PK fields are present and stable 1`] = `
{
  "citationIds": [
    "17503484",
  ],
  "halfLifeLabel": "~1–1.5 h",
  "halfLifeMax": 90,
  "halfLifeMin": 60,
  "route": "subcutaneous",
  "slug": "melanotan-i",
}
`;

exports[`compound-profiles — PK profile snapshots > melanotan-ii PK fields are present and stable 1`] = `
{
  "citationIds": [
    "9647890",
  ],
  "halfLifeLabel": "~20–40 min",
  "halfLifeMax": 40,
  "halfLifeMin": 20,
  "route": "subcutaneous",
  "slug": "melanotan-ii",
}
`;

exports[`compound-profiles — PK profile snapshots > mgf PK fields are present and stable 1`] = `
{
  "citationIds": [
    "12011461",
  ],
  "halfLifeLabel": "~20–30 min",
  "halfLifeMax": 30,
  "halfLifeMin": 20,
  "route": "subcutaneous",
  "slug": "mgf",
}
`;

exports[`compound-profiles — PK profile snapshots > mots-c PK fields are present and stable 1`] = `
{
  "citationIds": [
    "30394592",
  ],
  "halfLifeLabel": "~1–2 h",
  "halfLifeMax": 120,
  "halfLifeMin": 60,
  "route": "subcutaneous",
  "slug": "mots-c",
}
`;

exports[`compound-profiles — PK profile snapshots > oxytocin PK fields are present and stable 1`] = `
{
  "citationIds": [
    "6831191",
    "6692949",
  ],
  "halfLifeLabel": "~3–5 min",
  "halfLifeMax": 5,
  "halfLifeMin": 3,
  "route": "subcutaneous",
  "slug": "oxytocin",
}
`;

exports[`compound-profiles — PK profile snapshots > peg-mgf PK fields are present and stable 1`] = `
{
  "citationIds": [
    "15286081",
  ],
  "halfLifeLabel": "~3–5 days",
  "halfLifeMax": 7200,
  "halfLifeMin": 4320,
  "route": "subcutaneous",
  "slug": "peg-mgf",
}
`;

exports[`compound-profiles — PK profile snapshots > pinealon PK fields are present and stable 1`] = `
{
  "citationIds": [
    "22376166",
  ],
  "halfLifeLabel": "~1–2 h",
  "halfLifeMax": 120,
  "halfLifeMin": 60,
  "route": "subcutaneous",
  "slug": "pinealon",
}
`;

exports[`compound-profiles — PK profile snapshots > rr-a1 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "27906128",
  ],
  "halfLifeLabel": "~7 days",
  "halfLifeMax": 11040,
  "halfLifeMin": 9600,
  "route": "subcutaneous",
  "slug": "rr-a1",
}
`;

exports[`compound-profiles — PK profile snapshots > rr-a2 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "35143108",
  ],
  "halfLifeLabel": "~5 days",
  "halfLifeMax": 7200,
  "halfLifeMin": 6480,
  "route": "subcutaneous",
  "slug": "rr-a2",
}
`;

exports[`compound-profiles — PK profile snapshots > rr-a3 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "36354040",
  ],
  "halfLifeLabel": "~5–6 days",
  "halfLifeMax": 8640,
  "halfLifeMin": 7200,
  "route": "subcutaneous",
  "slug": "rr-a3",
}
`;

exports[`compound-profiles — PK profile snapshots > slu-pp-332 PK fields are present and stable 1`] = `
{
  "citationIds": [
    "33207103",
  ],
  "halfLifeLabel": "~2–4 h (estimated)",
  "halfLifeMax": 240,
  "halfLifeMin": 120,
  "route": "oral",
  "slug": "slu-pp-332",
}
`;

exports[`compound-profiles — PK profile snapshots > survodutide PK fields are present and stable 1`] = `
{
  "citationIds": [],
  "halfLifeLabel": "~3–4.5 days",
  "halfLifeMax": 6480,
  "halfLifeMin": 4320,
  "route": "subcutaneous",
  "slug": "survodutide",
}
`;

exports[`compound-profiles — PK profile snapshots > triptorelin PK fields are present and stable 1`] = `
{
  "citationIds": [
    "9652178",
  ],
  "halfLifeLabel": "~3–8 h",
  "halfLifeMax": 480,
  "halfLifeMin": 180,
  "route": "subcutaneous",
  "slug": "triptorelin",
}
`;

exports[`compound-profiles — PK profile snapshots > vip PK fields are present and stable 1`] = `
{
  "citationIds": [
    "6465669",
    "6578098",
  ],
  "halfLifeLabel": "~10–30 min (inhaled-route proxy; SC estimate)",
  "halfLifeMax": 30,
  "halfLifeMin": 10,
  "route": "subcutaneous",
  "slug": "vip",
}
`;

exports[`compound-profiles — value snapshots (formula + MW) > formula and molecularWeight are stable for all entries with real formulas 1`] = `
[
  {
    "formula": "C₆₂H₉₈N₁₆O₂₂",
    "molecularWeight": "1419.55 Da",
    "slug": "bpc-157",
  },
  {
    "formula": "C₃₈H₆₈N₁₀O₁₄",
    "molecularWeight": "889.02 Da",
    "slug": "tb-500",
  },
  {
    "formula": "C₃₇H₅₁N₉O₁₀S",
    "molecularWeight": "813.93 Da",
    "slug": "semax",
  },
  {
    "formula": "C₃₃H₅₇N₁₁O₉",
    "molecularWeight": "751.88 Da",
    "slug": "selank",
  },
  {
    "formula": "C₃₉₀H₆₁₉N₁₁₁O₁₁₅S₉",
    "molecularWeight": "9117.58 Da",
    "slug": "igf-1-lr3",
  },
  {
    "formula": "C₃₂₀H₅₁₁N₈₉O₉₆S₈",
    "molecularWeight": "7371.49 Da",
    "slug": "igf-des",
  },
  {
    "formula": "C₁₀₁H₁₅₂N₂₈O₂₂S₂",
    "molecularWeight": "2174.60 Da",
    "slug": "mots-c",
  },
  {
    "formula": "C₃₈H₄₉N₉O₅",
    "molecularWeight": "711.86 Da",
    "slug": "ipamorelin",
  },
  {
    "formula": "C₄₅H₅₅N₉O₆",
    "molecularWeight": "817.99 Da",
    "slug": "ghrp-2",
  },
  {
    "formula": "C₁₅₂H₂₅₂N₄₂O₄₃",
    "molecularWeight": "3367.71 Da",
    "slug": "cjc-1295-no-dac",
  },
  {
    "formula": "C₁₆₂H₂₆₈N₄₂O₄₇S",
    "molecularWeight": "3647.28 Da",
    "slug": "cjc-1295-w-dac",
  },
  {
    "formula": "C₁₄₉H₂₄₆N₄₄O₄₂S",
    "molecularWeight": "3357.93 Da",
    "slug": "sermorelin",
  },
  {
    "formula": "C₁₄H₂₁CuN₆O₄",
    "molecularWeight": "400.90 Da",
    "slug": "ghk-cu",
  },
  {
    "formula": "C₁₄H₂₂N₄O₉",
    "molecularWeight": "390.35 Da",
    "slug": "epithalon",
  },
  {
    "formula": "C₂₂₁H₃₆₆N₇₂O₆₇S",
    "molecularWeight": "5135.88 Da",
    "slug": "tesamorelin",
  },
  {
    "formula": "C₁₂₉H₂₁₅N₃₃O₅₅",
    "molecularWeight": "3108.27 Da",
    "slug": "thymosin-alpha-1",
  },
  {
    "formula": "C₂₀₅H₃₄₀N₆₀O₅₃",
    "molecularWeight": "4493.33 Da",
    "slug": "ll-37",
  },
  {
    "formula": "C₇₈H₁₂₃N₂₃O₂₃S₂",
    "molecularWeight": "1815.07 Da",
    "slug": "aod-9604",
  },
  {
    "formula": "C₅₀H₆₈N₁₄O₁₀",
    "molecularWeight": "1025.18 Da",
    "slug": "pt-141",
  },
  {
    "formula": "C₄₇H₅₈N₁₂O₆",
    "molecularWeight": "887.05 Da",
    "slug": "hexarelin",
  },
  {
    "formula": "C₁₆H₃₀N₄O₄",
    "molecularWeight": "342.43 Da",
    "slug": "kpv",
  },
  {
    "formula": "C₃₂H₄₉N₉O₅",
    "molecularWeight": "639.80 Da",
    "slug": "ss-31",
  },
  {
    "formula": "C₁₀H₁₁N₂⁺",
    "molecularWeight": "159.21 Da",
    "slug": "5-amino-1mq",
  },
  {
    "formula": "C₃₈H₆₄N₁₄O₁₁",
    "molecularWeight": "889.00 Da",
    "slug": "thymalin",
  },
  {
    "formula": "C₄₂H₇₂N₁₆O₁₅S",
    "molecularWeight": "1073.19 Da",
    "slug": "snap-8",
  },
  {
    "formula": "C₁₀H₁₇N₃O₆S",
    "molecularWeight": "307.32 Da",
    "slug": "glutathione",
  },
  {
    "formula": "C₁₁H₁₅N₂O₈P",
    "molecularWeight": "334.22 Da",
    "slug": "nad-precursor",
  },
  {
    "formula": "C₄₆H₅₆N₁₂O₆",
    "molecularWeight": "873.02 Da",
    "slug": "ghrp-6",
  },
  {
    "formula": "C₇₈H₁₁₁N₂₁O₁₉",
    "molecularWeight": "1646.87 Da",
    "slug": "melanotan-i",
  },
  {
    "formula": "C₅₀H₆₉N₁₅O₉",
    "molecularWeight": "1024.18 Da",
    "slug": "melanotan-ii",
  },
  {
    "formula": "C₃₅H₄₈N₁₀O₁₅",
    "molecularWeight": "848.82 Da",
    "slug": "dsip",
  },
  {
    "formula": "C₁₄₇H₂₃₇N₄₃O₄₃S",
    "molecularWeight": "3326.83 Da",
    "slug": "vip",
  },
  {
    "formula": "C₁₅H₂₆N₆O₈",
    "molecularWeight": "418.40 Da",
    "slug": "pinealon",
  },
  {
    "formula": "C₄₃H₆₆N₁₂O₁₂S₂",
    "molecularWeight": "1007.19 Da",
    "slug": "oxytocin",
  },
  {
    "formula": "C₁₂₉H₂₁₆N₃₀O₃₉S",
    "molecularWeight": "2866.25 Da",
    "slug": "mgf",
  },
  {
    "formula": "C₅₅H₇₅N₁₇O₁₃",
    "molecularWeight": "1182.32 Da",
    "slug": "gonadorelin",
  },
  {
    "formula": "C₆₄H₈₂N₁₈O₁₃",
    "molecularWeight": "1311.46 Da",
    "slug": "triptorelin",
  },
  {
    "formula": "C₆₃H₈₃N₁₇O₁₄",
    "molecularWeight": "1302.46 Da",
    "slug": "kisspeptin-10",
  },
  {
    "formula": "C₉H₁₄N₄O₅",
    "molecularWeight": "258.23 Da",
    "slug": "aicar",
  },
  {
    "formula": "C₆₃H₉₁CoN₁₃O₁₄P",
    "molecularWeight": "1344.38 Da",
    "slug": "b12-injection",
  },
  {
    "formula": "C₇H₁₅NO₃",
    "molecularWeight": "161.20 Da",
    "slug": "l-carnitine",
  },
]
`;
